adjusted hero image width & position to fix overflow on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,9 @@ body {
   overflow-x: hidden;
   font-family: 'Poppins', sans-serif; }
 
+html, body {
+  overflow-x: hidden; }
+
 h1,
 h2,
 h3,
@@ -106,7 +109,8 @@ header {
     font-size: 1em;
     text-decoration: none; }
   #hero .hero__image {
-    margin-bottom: 2.5rem; }
+    margin-bottom: 2.5rem;
+    margin-right: -6rem; }
     #hero .hero__image img {
       width: 30rem; }
 
